style.css
@import url('https://fonts.googleapis.com/css2?family=Martel+Sans:wght@600&family=Poppins:wght@300;400;700&display=swap');

* {
    padding: 0;
    margin: 0;
    font-family: 'Poppins', sans-serif;
}

body {
    background-color: black;
}

.main {
    background-image: url("assets/bg.jpg");
    background-position: center center;
    background-size: cover;
    background-repeat: no-repeat;
    height: 644px;
    position: relative;
}

.main .box {
    height: 644px;
    width: 100%;
    opacity: 0.6;
    position: absolute;
    top: 0;
    background-color: black;
}


/*nav {
    max-width: 60vw;
    justify-content: space-between;
    margin: auto;
    display: flex;
    align-items: center;
    height: 100px;
}

nav img {
    color: red;
    width: 130px;
    position: relative;
    z-index: 10;
}

nav button {
    position: relative;
    z-index: 10;
}
*/ 
.navbar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 20px 60px;
  background-color: rgba(0, 0, 0, 0.8);
  position: sticky;
  top: 0;
  z-index: 10;
}

.navbar .logo img {
  width: 130px;
}

.nav-links {
  display: flex;
  gap: 30px;
  list-style: none;
}

.nav-links li a {
  text-decoration: none;
  color: white;
  font-weight: 500;
  transition: color 0.3s;
}

.nav-links li a:hover {
  color: #e50914;
  text-shadow: 0 0 10px red;
}

.nav-buttons {
  display: flex;
  gap: 10px;
}
.hero {
    font-family: 'Martel Sans', sans-serif;
    height: calc(100% - 100px);
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    color: white;
    position: relative;
    gap: 23px;
    padding: 0 30px;
}

.hero > :nth-child(1) {
    font-size: 48px;
    font-weight: 900;
    text-align: center;
}

.hero > :nth-child(2) {
    font-size: 20px;
    font-weight: 400;
    text-align: center;
}

.hero > :nth-child(3) {
    font-size: 16px;
    font-weight: 300;
    text-align: center;
}


.separation {
    height: 7px;
    background-color: rgb(46, 44, 44);
    position: relative;
    z-index: 20;
}

.btn {
    padding: 3px 8px;
    font-weight: 400;
    color: white;
    background-color: rgba(248, 243, 243, 0.021);
    border-radius: 4px;
    border: 1px solid white;
    cursor: pointer;

}

.btn-red {
    background-color: red;
    color: white;
    padding: 3px 24px;
    font-size: 20px;
    border-radius: 4px;
    font-weight: 400;
}

.btn-red-sm {
    background-color: red;
    color: white;
}

.hero-buttons {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 16px;
}

.main input {
    padding: 7px 101px 8px 14px;
    color: white;
    font-size: 12px;
    border-radius: 4px;
    background-color: rgba(23, 23, 23, 0.7);
    border: 1px solid rgba(246, 238, 238, 0.5);
}

.first {
    display: flex;
    justify-content: center;
    max-width: 70vw;
    margin: auto;
    color: white;
    justify-content: center;
    align-items: center;
}



.secImg {
    position: relative;
}

.secImg img {
    width: 555px;
    position: relative;
    z-index: 10;
}

.secImg video {
    position: absolute;
    top: 51px;
    right: 0;
    width: 555px;
}

section.first>div {
    display: flex;
    flex-direction: column;
    padding: 34px 0;
}

section.first>div :nth-child(1) {
    font-size: 48px;
    font-weight: bolder;
}


section.first>div :nth-child(2) {
    font-size: 24px;

}


.faq h2 {
    text-align: center;
    font-size: 48px;
}

.faq {
    background: black;
    color: white;
    padding: 34px;
}

.faqbox:hover {
    background-color: #414141;
    color: white;
}

.faqbox svg {
    filter: invert(1);
}

.faqbox {
    transition: all 1s ease-out;
    font-size: 24px;
    /* display: flex; */
    /* justify-content: space-between; */
    background-color: #2d2d2d;
    padding: 24px;
    max-width: 60vw;
    margin: 34px auto;
    cursor: pointer;
}

.faq-header{
    display: flex;
    justify-content: space-between;
}

.answer {
  max-height: 0;
  overflow: hidden;
  transition: max-height 0.4s ease;
  font-size: 1rem;
  line-height: 1.5;
  margin-top: 10px;
}

.faqbox.open .answer {
  max-height: 500px; /* Enough to show full answer */
}

.faqbox .icon {
  transition: transform 0.3s ease;
}

.faqbox.open .icon {
  transform: rotate(45deg);
}


footer {
    color: white;
    max-width: 60vw;
    margin: auto;
    padding: 60px;
}

footer .questions {
    padding: 34px 0;
}


.footer {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr;
    color: white;
}



@media screen and (max-width: 1300px) {

    nav{
        max-width: 90vw;
    }

    .first {
        flex-wrap: wrap;
    }

    .secImg img {
        width: 305px;
    }

    .secImg video {
        width: 305px;
    }

    .hero> :nth-child(1) {
        font-size: 32px;
    }

    .hero> :nth-child(2) {
        font-size: 18px;
    }

    .hero> :nth-child(3) {
        font-size: 18px;
    }

    .hero-buttons {
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        gap: 16px;
    }

    .faq h2 {
        text-align: center;
        font-size: 32px;
    }

    footer {
        max-width: 90vw;
        padding: 75px 0;
    }

    .footer-item{
        align-items: center;
    }
 

}



@media screen and (max-width: 1300px) {

    .footer {
        display: grid;
        grid-template-columns: 1fr 1fr;
        gap: 25px;
    }
}


.footer a {
    font-size: 14px;
    color: white;
}

.footer-item {
    display: flex;
    flex-direction: column;
    gap: 23px;
}

/* Smooth hover effects for buttons */
.btn,
.btn-red,
.btn-red-sm {
  transition: all 0.3s ease-in-out;
}

.btn:hover,
.btn-red:hover,
.btn-red-sm:hover {
  transform: scale(1.05);
  box-shadow: 0 4px 12px rgba(255, 255, 255, 0.2);
  background-color: #c11119;
}

.footer a {
  transition: all 0.3s ease;
  color: #999;
  text-decoration: none;
}

.footer a:hover {
  color: white;
  text-decoration: underline;
}

